Add dynamic CORS origins and GitHub OAuth integration
Refactored CORS configuration in both CorsConfig and SecurityConfiguration to allow origins to be set via environment variable. Enhanced User.tsx to support GitHub OAuth via popup and postMessage, improving user experience and security. Updated deployment YAML to include GitHub OAuth and CORS environment variables.